4.12
New Features:
* icon theme change works without reload
* autohide

Fixed Bugs:
* icons, taskbar do not free all tasks when destroyed


4.11
Fixed Bugs:
* black background when no bg pixmap and transparency is unset

4.10
New Fetures:
* tclock: dclock was renamed to tclock = text clock
* dclock: digital blue clock. adopted from blueclock by
    Jochen Baier <email@Jochen-Baier.de>
* dclock: custom clock color can be set with 'color' option
  Plugin {
     type = dclock
     config {
         TooltipFmt = %A %x
         Action = xterm &
         color = wheat
     }
  }

* menu: items are sorted by name
* menu: icon size set to 22
* launchbar: drag-n-drop now accepts urls draged from web browsers
* style changes are grouped and only last of them is processed

Fixed Bugs:
* menu: forgoten g_free's were added
* 1723786: linkage problems with --as-needed flag
* 1724852: crash if root bg is not set
* WM_STATE usage is dropped. NET_WM_STATE is used instead. affected plugins are
  taskbar and pager
* fixed bug where pager used unupdated panel->desknum instead of pager->desknum
* all Cardinal vars were changed to guint from int
* bug in Makefile.common that generated wrong names in *.dep files
* style changes are grouped and only last of them is processed

4.9
* new menu placement to not cover panel; used in menu and taskbar
* taskbar: icons were added to task's menu (raise, iconify, close)
* access to WM_HINTS is done via XGetWMHints only and not via get_xa_property;
  in taskbar it fixes failure to see existing icon pixmap
* 1704709: config checks for installed devel packages

4.8
* help text in configurator was made selectable
* pager shows desktop wallpaper
* expanding tilda (~) in action field in config files
* menu icons size was set to 24 from 22 to avoid scaling
* avoid re-moving panel to same position
* plugins section in configurator dialog suggests to edit config manually
* taskbar vertical layout was fixed
* taskbar 'icons only' mode was optimized