@@ -1,7 +1,8 @@
 4.12
 New Features:
-* icon theme change works without reload
+* smooth icon theme change without panel reload
 * autohide
+* 3 sec delayed menu creation to improve start-up time
 
 Fixed Bugs:
 * icons, taskbar do not free all tasks when destroyed
